--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>runtime</scope>
 		</dependency>
 
 		<dependency>
